image visibility bugs fixed

--- a/style.less
+++ b/style.less
@@ -85,7 +85,7 @@ body {
 
                     // banner
                     .banner-container {
-                        background-image: url(/Images/Banner.png);
+                        background-image: url(Images/Banner.png);
                         background-repeat: no-repeat;
                         background-size: cover;
                         background-position: center;
